--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,13 +1,16 @@
 .header {
     background-image: url('../images/post-image.jpg');
     background-repeat: no-repeat;
-    box-sizing: cover;
+    background-size: cover;
 }
 
 .header__title {
     font-family: $playfair;
-    font-size: $x-large;
-    font-weight: $black;
+    font-size: $xx-large;
+    font-weight: $bold;
+    color: $white;
+    padding-top: 210px;
+    padding-bottom: 210px;
     display: flex;
-    align-items: center;
+    justify-content: center;
 }
