--- a/assets/sass/layout/_main-section.scss
+++ b/assets/sass/layout/_main-section.scss
@@ -1,7 +1,11 @@
 .main__date {
-    font-family: $playfair;    
+    font-family: $playfair;
+    margin: 3rem 4.5rem 3rem 4.5rem;
 }
 
 .main__text {
     font-family: $roboto;
+    margin: 0rem 4.5rem 4rem 4.5rem;
+    line-height: 2rem;
+
 }
