--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -12,5 +12,6 @@
 @import 'layout/header';
 @import 'layout/main-section';
 @import 'layout/footer';
+@import 'layout/pagination';
 
 @import 'components/buttons';
